--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@400;700&display=swap&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@400;700&display=swap&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=bE4l4q"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=bE4l4q" type="text/css">
+  <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=dMwxIz"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=dMwxIz" type="text/css">
 
   
   
@@ -35,12 +35,12 @@
 				<h1 class="mbr-section-title mbr-fonts-style mbr-white mb-4 display-1"><strong>Дарова, сайт Семёна</strong></h1>
 				
 				<p class="mbr-fonts-style mbr-text mbr-white mb-4 display-7">
-					Всякие штучки полезные ниже для Локуса</p>
-				<div class="mbr-section-btn"><a class="btn btn-danger display-7" href="locus-actions://https/sepopov.github.io/SePo/Sepo-Locus-Installer.xml">Установить пакет с Охотугодиями РС(Я)<br>жми<br></a></div>
+					Всякие штучки полезные ниже для Локуса и Guru</p>
+				<div class="mbr-section-btn"><a class="btn btn-danger display-7" href="locus-actions://https/sepopov.github.io/SePo/Sepo-Locus-Installer.xml">Locus Map<br>Установить пакет с Охотугодиями РС(Я)<br>жми<br></a> <a class="btn btn-warning display-7" href="guru://open?path=https://sepopov.github.io/SePo/Sepo-Guru-IOS-Installer.ms">GURU Maps IOS<br>Установить пакет с Охотугодиями РС(Я)<br>жми<br></a></div>
 			</div>
 		</div>
 	</div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3134114" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/easiest-website-builder.html">Easiest Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3134114" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/drag-drop-website-builder.html">Drag and Drop Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
