--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				
 				<p class="mbr-fonts-style mbr-text mbr-white mb-4 display-7">
 					Всякие штучки полезные ниже для Локуса и Guru</p>
-				<div class="mbr-section-btn"><a class="btn btn-danger display-7" href="locus-actions://https/sepopov.github.io/SePo/Sepo-Locus-Installer.xml">Locus Map<br>Установить пакет с Охотугодиями РС(Я)<br>жми<br></a> <a class="btn btn-warning display-7" href="https://sepopov.github.io/SePo/Sepo-Guru-IOS-Installer.ms">GURU Maps IOS<br>Установить пакет с Охотугодиями РС(Я)<br>жми<br></a></div>
+				<div class="mbr-section-btn"><a class="btn btn-danger display-7" href="locus-actions://https/sepopov.github.io/SePo/Sepo-Locus-Installer.xml">Locus Map<br>Установить пакет с Охотугодиями РС(Я)<br>жми<br></a> <a class="btn btn-warning display-7" href="guru://open?url=https://sepopov.github.io/SePo/Sepo-Guru-IOS-Installer.ms">GURU Maps IOS<br>Установить пакет с Охотугодиями РС(Я)<br>жми<br></a></div>
 			</div>
 		</div>
 	</div>
